k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
        - name: expensy-backend
          image: anne2693/expensy-backend:latest  # CI/CD should overwrite this
          ports:
            - containerPort: 8706
---
apiVersion: v1
kind: Service
metadata:
  name: expensy-backend
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: expensy-backend
  ports:
    - port: 8706
      targetPort: 8706
